# pactos-v1

./: .env.example  .gitignore  Cargo.toml  PROJECT_STATUS.md  README.md  package-lock.json  package.json
.github/workflows/: backend.yml
.lovable/: plan.md
backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/common/: zod-validation.pipe.ts
backend/src/platform/: prisma.module.ts
contracts/agreement-registry/: Cargo.toml
contracts/agreement-registry/src/: lib.rs
contracts/agreement-runtime/: Cargo.toml
contracts/agreement-runtime/src/: lib.rs
contracts/audit-module/: Cargo.toml
contracts/audit-module/src/: lib.rs
contracts/distribution-module/: Cargo.toml
contracts/distribution-module/src/: lib.rs
contracts/escrow-module/: Cargo.toml
contracts/escrow-module/src/: lib.rs
contracts/pactos-shared/: Cargo.toml
contracts/pactos-shared/src/: lib.rs
contracts/permission-module/: Cargo.toml
contracts/treasury-module/: Cargo.toml
docs/: soroban-contracts.md  technical-architecture.md
scripts/: deploy-testnet.sh
src/: routeTree.gen.ts  styles.css
src/assets/: pactos_intro.png.asset.json
src/components/brand/: Logo.tsx  (+1 more)
src/lib/: blocks-meta.ts  format.ts  mock.ts  stores.ts  types.ts  wallet-auth.ts
src/routes/: __root.tsx  _app.activity.tsx  _app.agreements.$id.tsx  _app.agreements.tsx  _app.analytics.tsx  _app.builder.tsx  _app.dashboard.tsx  _app.settings.tsx  _app.templates.tsx  _app.tsx  index.tsx
(+39 files in other folders)
